--- a/client-app/package.json
+++ b/client-app/package.json
@@ -9,11 +9,13 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.56",
     "@types/react": "^17.0.45",
+    "@types/react-calendar": "^3.5.2",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
+    "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "semantic-ui-react": "^2.1.3",
