--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,13 +11,15 @@
     "@types/react": "^17.0.45",
     "@types/react-calendar": "^3.5.2",
     "@types/react-dom": "^18.0.6",
-    "axios": "^0.27.2",
+    "axios": "^0.26.1",
+    "history": "^4.10.1",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "semantic-ui-react": "^2.1.3",
     "typescript": "^4.8.2",
     "uuid": "^8.3.2",
@@ -48,7 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.2",
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4",
     "react-router-dom": "^5.3.0"
   }
