--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,18 +12,22 @@
     "@types/react-calendar": "^3.5.2",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.26.1",
+    "date-fns": "^2.29.2",
+    "formik": "^2.2.9",
     "history": "^4.10.1",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-calendar": "^3.7.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "semantic-ui-react": "^2.1.3",
     "typescript": "^4.8.2",
     "uuid": "^8.3.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,8 +54,10 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4",
+    "@types/yup": "^0.32.0",
     "react-router-dom": "^5.3.0"
   }
 }
