--- a/client-app/package.json
+++ b/client-app/package.json
@@ -19,8 +19,10 @@
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-calendar": "^3.7.0",
+    "react-cropper": "^2.1.8",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "semantic-ui-react": "^2.1.3",
